tests/compile/child_two_dynamic_methods.stderr
error: at most one dynamic #[child] method is allowed per activation impl; found 2: first, second
  --> tests/compile/child_two_dynamic_methods.rs:29:1
   |
29 | / impl Solar {
30 | |     #[plexus_macros::method]
31 | |     async fn ping(&self) -> impl Stream<Item = String> + Send + 'static {
32 | |         stream! { yield "pong".into(); }
...  |
44 | | }
   | |_^

warning: use of deprecated struct `plexus_core::ChildCapabilities`: Use MethodRole::DynamicChild { list_method, search_method } instead. Removed in 0.7.
  --> tests/compile/child_two_dynamic_methods.rs:10:1
   |
10 | / #[plexus_macros::activation(
11 | |     namespace = "leaf",
12 | |     version = "1.0.0",
13 | |     crate_path = "plexus_core"
14 | | )]
   | |__^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)
